<resources>
    <string name="app_name">Fix Mobile Buttons</string>
    <string name="image">Image</string>
    <string name="_permission_heading">Accessibility Permission Required</string>
    <string name="_permission_body">This App uses Accessibility permission to Perform Following Actions\n
        <b>Actions:</b>\n
        <b>1:</b> Open Power Menu\n
        <b>2:</b> Turn Off Screen\n
        <b>3:</b> Volume Buttons for Screen Locking\n
        <b>4:</b> Keys Remap Service\n
        Please enable Accessibility permission from Settings to perform the actions.</string>
    <string name="_enable_permission">Enable Permission</string>

    <string name="accessibility_service_label">Remap Keys</string>
    <string name="service_description">This service allows the application to run in the background,
        Hence, to get the best of this application, turn on the Service</string>
    <string name="volume_action">Volume - action</string>
    <string name="volume_action_plus">Volume + action</string>
    <string name="connect_with_me">Connect with me....</string>
    <string name="str_linkedin">LinkedIn</string>
    <string name="str_github">Github</string>
    <string name="str_linked_profile">https://www.linkedin.com/in/muhammad-hasnain-altaf/</string>
    <string name="str_github_profile">https://github.com/Hasnain17</string>
</resources>