<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:elevation="@dimen/_10sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog">
    <ImageView
        android:id="@+id/mtCancelExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/image"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_cross_dialog"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/ivTop"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/ic_android_image"
        android:layout_marginVertical="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/connect_with_me"
        android:fontFamily="@font/baloo_bhaina_2_medium"
        android:textSize="@dimen/_17ssp"
        android:textColor="@color/textColor_0"
        app:layout_constraintStart_toStartOf="@id/ivTop"
        app:layout_constraintEnd_toEndOf="@id/ivTop"
        app:layout_constraintTop_toBottomOf="@id/ivTop"/>

    <TextView
        android:id="@+id/tvLinkedIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:textAlignment="textStart"
        android:text="@string/str_linkedin"
        android:fontFamily="@font/baloo_bhaina_2"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/gray_3"
        app:layout_constraintStart_toStartOf="@id/tvHeading"
        app:layout_constraintEnd_toEndOf="@id/tvHeading"
        app:layout_constraintTop_toBottomOf="@id/tvHeading"
        app:drawableEndCompat="@drawable/ic_linked_in" />

    <TextView
        android:id="@+id/tvGithub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:textAlignment="textStart"
        android:text="@string/str_github"
        android:fontFamily="@font/baloo_bhaina_2"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/gray_3"
        app:layout_constraintStart_toStartOf="@id/tvLinkedIn"
        app:layout_constraintEnd_toEndOf="@id/tvLinkedIn"
        app:layout_constraintTop_toBottomOf="@id/tvLinkedIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:drawableEndCompat="@drawable/github" />

</androidx.constraintlayout.widget.ConstraintLayout>